--- a/Module_5/build.gradle
+++ b/Module_5/build.gradle
@@ -21,10 +21,9 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
+	implementation('org.springframework.boot:spring-boot-starter-data-redis')
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'io.projectreactor:reactor-test'
 	implementation 'org.projectlombok:lombok:1.18.26'
 	annotationProcessor("org.projectlombok:lombok")
 	implementation 'com.google.guava:guava:27.0-jre'
