--- a/Module_5/docker/docker-compose.yml
+++ b/Module_5/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   postgres-db:
-    image: postgres
+    image: postgres:16
     ports:
       - "5432:5432"
     environment:
@@ -9,6 +9,6 @@ services:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=app_db
   redis:
-    image: redis
+    image: redis:7.2
     ports:
       - "6379:6379"
