--- a/module_1/pom.xml
+++ b/module_1/pom.xml
@@ -38,7 +38,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>org.example.Main</mainClass>
+                            <mainClass>ru.goltsov.education.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
