Защитил приложение «Новости» с помощью Spring Security

--- a/Module_4/src/main/resources/application.yml
+++ b/Module_4/src/main/resources/application.yml
@@ -16,6 +16,9 @@ spring:
 app:
   check-api-client-header: false
   client-api-key: 12345
+  security:
+    type: db
+
 server:
   port: 8080
   host: http://localhost
