--- a/Module_4/build.gradle
+++ b/Module_4/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-validation")
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation("org.springframework.boot:spring-boot-starter-web")
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4")
     implementation group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '3.1.0'
     implementation 'org.projectlombok:lombok:1.18.26'
